# aio_space_traders

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/aio_space_traders/: SpaceTraders.json  __init__.py  api.py  errors.py  model.py  utils.py
src/custom_integration/: custom.py
src/new_traders/: api.py  errors.py  model.py  primitive.py
tests/: factories.py
tests/aio_space_traders/: test_api.py
