[project]
name = "aioSpaceTraders"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Daniel J Brown", email = "browndj3@gmail.com" }
]
dependencies = [
    "pydantic>=2.8.2",
    "niquests[http3,ocsp,speedups]>=3.11.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/new_traders"]

[tool.uv]
dev-dependencies = [
    "ipython>=8.28.0",
    "polyfactory>=2.17.0",
    "rich>=13.9.2",
]
