[project]
name = "aio_space_traders"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Daniel J Brown", email = "browndj3@gmail.com" }
]
dependencies = [
    "pydantic>=2.8.2",
    "niquests[http3,ocsp,speedups]>=3.11.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aio_space_traders"]

[tool.uv]
dev-dependencies = [
    "ipython>=8.28.0",
    "polyfactory>=2.17.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.1",
    "rich>=13.9.2",
    "ruff>=0.8.1",
]

[tool.basedpyright]
"reportUnusedCallResult" = false
"reportAny" = false

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "funtion"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "UP"]
extend-select = ["COM812"]

